
Changes in JMurmel-1.4.7 relative to JMurmel-1.4.6

 * changed defun/ define: are now allowed inside labels forms
 * changed car/ cdr: no longer accept strings

 * added macrolet

 * mlib: added mappend, mappend-tails, concatenate

 * fixed setq with multiple assignments and multiple-value-call


Changes in JMurmel-1.4.6 relative to JMurmel-1.4.5
released: 2024-03-02

 * changed/ fixed cond clauses w/o body to return the primary result of the test-form (was: nil)
 * changed printing of conditions: (write cnd nil) will only print the message, (write cnd t)
   will also print the location info
 * changed mlib: renamed the functions last0, last1, lastn to m%last0, m%last1, m%lastn
 * changed mlib: write-char, terpri, prin1, princ, print and pprint
   now accept an optional output destination
 * changed read-textfile, write-textfile, write-textfile-lines: the optional parameter
  'translate-lineend-p' controls translating from/to OS-dependent lineend character (sequence)s
 * changed read-textfile, read-textfile-lines, write-textfile, write-textfile-lines:
   the symbol t as a filename indicates "stdin"
 * changed write, writeln, lnwrite: "nil" is no longer an alias for stdout, only "t" is

 * added #1= style labelled forms to the reader
 * added tailrecursion->loop transformation for compiled Murmel:
   transform the innermost tail recursion/ named let/ let* /letrec into a loop in compiled code
   avoiding the TCO trampoline
 * added limited support for non-toplevel define/ defun aka let-over-lambda in compiled Murmel:
   define/ defun may now appear in the body of (possibly nested) let/ let*/ letrec/ multiple-value-bind
   forms

 * mlib: added values as a place for setf
 * mlib: added psetf
 * mlib: added subst, subst-if, nsubst, nsubst-if
 * mlib: added endp, copy-list, copy-tree, copy-alist

 * fixed multiple-value-bind when the values form was a variable
 * fixed compiled (list* 1 2 3 (values 4 5)) and (list 1 2 3 (values 4 5))